<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>mast_control</name>
  <version>0.0.0</version>
  <description>Control the mast of the rover, allowing pan and tilt operations.</description>
  <maintainer email="ian_gillespie@mac.com">pi</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>mast_control_interfaces</exec_depend>
  <exec_depend>adafruit-circuitpython-servokit</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>